force-app/main/default/objects/Financial_Week__c/Financial_Week__c.object-meta.xml
<CustomObject>
    <description>Week/Year Setting used for Trace Codes</description>
    <label>Financial Week</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Financial Week Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Week</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>