force-app/main/default/objects/Financial_Week__c/fields/Fiscal_Week__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Week__c</fullName>
    <label>Fiscal Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>