force-app/main/default/objects/Financial_Week__c/fields/FISCAL_WEEK_YEAR__c.field-meta.xml
<CustomField>
    <fullName>FISCAL_WEEK_YEAR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FISCAL WEEK YEAR</label>
    <length>4</length>
    <type>Text</type>
</CustomField>