force-app/main/default/objects/Financial_Week__c/fields/PRODUCTION_DATE__c.field-meta.xml
<CustomField>
    <fullName>PRODUCTION_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PRODUCTION DATE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>