force-app/main/default/objects/Financial_Week__c/fields/YEAR__c.field-meta.xml
<CustomField>
    <fullName>YEAR__c</fullName>
    <label>YEAR</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>