force-app/main/default/objects/Financial_Week__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Week__c</columns>
    <columns>FISCAL_WEEK_YEAR__c</columns>
    <columns>PRODUCTION_DATE__c</columns>
    <columns>YEAR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>